examples/negatives/variables_negative.bl
var 1_1: Int = 10;
// variable naming error is found
print(1_1);